name:                offscripter
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/konn/offscripter#readme
license:             BSD3
license-file:        LICENSE
author:              Hiromi ISHII
maintainer:          konn.jinro _at_ gmail.com
copyright:           2015 (c) Hiromi ISHII
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.ONScripter.Off
                     , Language.ONScripter.Off.Compiler.Lua
                     , Language.ONScripter.Off.Compiler.NScript
                     , Language.ONScripter.Off.Prelude
                     , Language.ONScripter.Off.Syntax
                     , Language.ONScripter.Off.Types
  other-modules:       Language.ONScripter.Off.Macros
                       Language.ONScripter.Off.Syntax.Combinators
                       Language.ONScripter.Off.Utils
  build-depends:       base        >= 4.7 && < 5
                     , bytestring >= 0.10.6.0
                     , containers >= 0.5.6.2
                     , lens >= 4.12.3
                     , mtl >= 2.2.1
                     , operational >= 0.2.3.2
                     , template-haskell >= 2.10.0.0
                     , text >= 1.2.1.3
                     , text-icu >= 0.7
                     , unordered-containers >= 0.2.5.1
  default-language:    Haskell2010

test-suite offscripter-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , offscripter
                     , template-haskell >= 2.10.0.0
                     , text >= 1.2.1.3
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/konn/offscripter
